Uploaded image for project: 'Qpid Proton'
  1. Qpid Proton
  2. PROTON-672

proton-c: Messenger doesn't support setting the transport tracer

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • proton-0.7
    • proton-0.8
    • proton-c
    • None

    Description

      Messenger doesn't support setting the transport tracer. Messenger ought to provide a way to allow the transport tracer function to be overriden so that tracing can be captured by the consuming application.

      Patches attached to implement this.

      Attachments

        1. 14_add_tracer_to_messenger.c.patch
          2 kB
          Dominic Evans
        2. 14_add_tracer_to_messenger.h.patch
          1 kB
          Dominic Evans
        3. 15_get_connection_from_transport.c.patch
          0.7 kB
          Dominic Evans
        4. 15_get_connection_from_transport.h.patch
          0.8 kB
          Dominic Evans

        Activity

          People

            rhs Rafael H. Schloming
            dnwe Dominic Evans
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: