PROTON-672: patch from dominic for setting the tracer from messenger, also includes accessor for getting the connection associated with a transport

git-svn-id: https://svn.apache.org/repos/asf/qpid/proton/trunk@1626087 13f79535-47bb-0310-9956-ffa450edef68